# Abu-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/abu_cli/: __init__.py  agent.py  commands.py  main.py  mcp_manager.py  permissions.py  renderer.py  repl.py  sessions.py  themes.py
src/abu_cli/tools/: __init__.py  bash.py  edit.py  glob_tool.py  grep.py  read.py  web_search.py  write.py
tests/: test_permissions.py  test_sessions.py  test_themes.py  test_tools.py  test_undo.py
