[project]
name = "Abu-CLI"
version = "0.1.0"
description = "Abu CLI — Interactive AI coding assistant, powered by AgentX framework"
requires-python = ">=3.11"
dependencies = [
    "agentx @ file:///Users/didi/Documents/PM/ClaudeCodeDev/agentx",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
Abu = "abu_cli.main:main"
abu = "abu_cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/abu_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
